--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@buildix/wheel-datepicker": "^1.0.1",
+    "@neshan-maps-platform/ol": "^1.0.5",
+    "@neshan-maps-platform/react-openlayers": "^3.0.2",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
@@ -41,6 +43,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tailwindcss/vite": "^4.1.13",
     "@types/moment-jalaali": "^0.7.9",
+    "@types/ol": "5",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
