--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "@types/moment-jalaali": "^0.7.9",
     "@types/react-helmet": "^6.1.11",
     "axios": "^1.12.2",
+    "baseline-browser-mapping": "^2.9.19",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.19",
